Also improve UnverifiedJsonWebToken
use a faster Base64 decoder, and an optimised Uuid string converter.

Saves roughly 500ns per iteration of decoding.